[bumpversion]
current_version = 0.4.11
commit = True
tag = True
parse = (?P<major>\d+)
	\.(?P<minor>\d+)
	\.(?P<patch>\d+)
	(?P<release>[a]*)(?P<num>\d*)
serialize = 
	{major}.{minor}.{patch}{release}{num}
	{major}.{minor}.{patch}
tag_name = {new_version}

[metadata]
name = sbmlutils
url = https://github.com/matthiaskoenig/sbmlutils
download_url = https://pypi.org/project/sbmlutils
project_urls = 
	Source Code = https://github.com/matthiaskoenig/sbmlutils
	Documentation = https://sbmlutils.readthedocs.io
	Bug Tracker = https://github.com/matthiaskoenig/sbmlutils/issues
author = Matthias Koenig
author_email = konigmatt@googlemail.com
maintainer = Matthias Koenig
maintainer_email = konigmatt@googlemail.com
classifiers = 
	Development Status :: 4 - Beta
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
	Operating System :: OS Independent
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Bio-Informatics
license = LGPL-3.0
description = sbmlutils are utilities for working with SBML.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = 
	modeling
	standardization
	SBML

[options]
zip_safe = True
python_requires = >=3.7
install_requires = 
	numpy==1.19.3
	depinfo>=0.1.7
	scipy>=1.6.0
	sympy>=1.7.1
	matplotlib>=3.3.3
	pandas>=1.2.1
	tabulate>=0.8.7
	Jinja2>=2.11.2
	requests>=2.24.0
	beautifulsoup4>=4.9.3
	openpyxl>=3.0.6
	xmlschema>=1.2.3
	xmltodict>=0.12.0
	python-libsbml-experimental>=5.19.0
	phrasedml>=1.1.0
	antimony>=2.12.0
	libroadrunner>=2.0.5
	pytest>=6.2.1
tests_require = 
	tox>=3.21.4
	pytest>=6.2.2
setup_requires = 
	pytest-runner
packages = find:
package_dir = 
	= src
include_package_data = True

[aliases]
test = pytest

[options.packages.find]
where = src

[options.extras_require]
development = 
	black
	bump2version
	isort
	tox
	pytest>=6.1
docs = 
	sphinx>=3.4.3
	ipykernel>=5.4.3
	nbsphinx>=0.8.1
	sphinx_rtd_theme>=0.5.1
	pypandoc>=1.5
	sphinx-autoapi>=1.7.0

[bdist_wheel]
universal = 1

[bumpversion:part:release]
optional_value = placeholder
first_value = placeholder
values = 
	placeholder
	a

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:src/sbmlutils/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"
