[bumpversion]
current_version = 0.7.6
commit = True
tag = True
parse = (?P<major>\d+)
	\.(?P<minor>\d+)
	\.(?P<patch>\d+)
	(?P<release>[a]*)(?P<num>\d*)
serialize =
	{major}.{minor}.{patch}{release}{num}
	{major}.{minor}.{patch}
tag_name = {new_version}

[metadata]
name = sbmlutils
url = https://github.com/matthiaskoenig/sbmlutils
download_url = https://pypi.org/project/sbmlutils
project_urls =
	Source Code = https://github.com/matthiaskoenig/sbmlutils
	Documentation = https://sbmlutils.readthedocs.io
	Bug Tracker = https://github.com/matthiaskoenig/sbmlutils/issues
author = Matthias Koenig
author_email = konigmatt@googlemail.com
maintainer = Matthias Koenig
maintainer_email = konigmatt@googlemail.com
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
	Operating System :: OS Independent
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Bio-Informatics
license = LGPL-3.0
description = sbmlutils are utilities for working with SBML.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
	modeling
	standardization
	SBML

[options]
zip_safe = True
python_requires = >=3.8
install_requires =
	pymetadata>=0.3.7

	depinfo
	rich
	lxml
	requests
	jinja2
	xmltodict

	numpy>=1.21.1
	python-libsbml>=5.19.7
    antimony>=2.13.2
    libroadrunner

	scipy>=1.8
	pandas>=1.4
	pint>=0.18
	tabulate>=0.8.9
	beautifulsoup4>=4.10
	markdown-it-py>=2.0.1
	openpyxl>=3.0.9
	xmlschema>=1.9.2

	matplotlib>=3.5

	fastapi>=0.73.0
	uvicorn>=0.14.4
	python-multipart>=0.0.5
	py2cytoscape>=0.7.1
tests_require =
	tox>=3.24.3
	pytest>=7.0.1
setup_requires =
	pytest-runner
packages = find:
package_dir =
	= src
include_package_data = True

[aliases]
test = pytest

[options.packages.find]
where = src

[options.extras_require]
development =
	pip-tools>6.5.1
	black>=22.1.0
	bump2version>=1.0.1
	isort>=5.10.1
	tox>=3.24.3
	flake8>=6.0.0
	flake8-mypy>=17.8.0
	mypy>=0.991
	pytest>=7.0.1
	pytest-cov>=3.0.0
docs =
	sphinx>=3.4.3
	ipykernel>=5.4.3
	nbsphinx>=0.8.1
	sphinx_rtd_theme>=0.5.1
	pypandoc>=1.5
	sphinx-autoapi>=1.7.0

[bdist_wheel]
universal = 1

[bumpversion:part:release]
optional_value = placeholder
first_value = placeholder
values =
	placeholder
	a

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:src/sbmlutils/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"
